--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script>
-        alert ("Hola mi amor")
+        alert ("Hola")
     </script>
     <div class="contenedor">
         <p>¿Quieres ser mi novia?<br> <3</p>
