--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <script>
-        alert ("Hola preciosa")
+        alert ("Hola corazón")
     </script>
     <div class="contenedor">
-        <p>¿Quieres ser mi novia?<br> <3</p>
+        <p>¿Quieres ser mi novia? <3</p>
+    <div>
+        <img id="cora" src="abrazo.svg" alt="">
+    </div>
         <button id="yesbtn">Si</button>
         <button id="nobtn">No</button>
     </div>
