--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         alert ("Hola corazón")
     </script>
     <div class="contenedor">
-        <p>¿Quieres ser mi novia? <3</p>
+        <p>Fer, queso, atún, cheto de bolita, ¿te gustaria ser mi novia? <3</p>
     <div>
         <img id="cora" src="abrazo.svg" alt="">
     </div>
