--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <script>
-        alert ("Hola corazón")
+        alert ("Hola preciosísima")
     </script>
     <div class="contenedor">
-        <p>Fer, queso, atún, cheto de bolita, ¿te gustaria ser mi novia? <3</p>
+        <p>Fer, ¿te gustaria ser mi novia? <3</p>
     <div>
         <img id="cora" src="abrazo.svg" alt="">
     </div>
