--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script>
-        alert ("Hola preciosísima" /n"Solo quiero decirte que eres lo mas lindo que mis ojos han visto")
+        alert ("Hola preciosísima. Solo quiero decirte que eres lo mas lindo que mis ojos han visto")
     </script>
     <div class="contenedor">
         <p>Fer, ¿te gustaria ser mi novia? <3</p>
