--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         alert ("Hola preciosísima, quiero decirte que eres lo mas lindo que mis ojos han visto")
     </script>
     <div class="contenedor">
-        <p>Fer, ¿te gustaria ser mi novia? <3</p>
+        <p>Fer, ¿te gustaría ser mi novia? <3</p>
     <div>
         <img id="cora" src="abrazo.svg" alt="">
     </div>
