--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <script>
-        alert ("Hola preciosísima, quiero decirte que eres lo más lindo que mis ojos han visto")
+        alert ("Hola corazón. Te amo <3")
     </script>
     <div class="contenedor">
-        <p>Fer, ¿te gustaría ser mi novia? <3</p>
+        <p>Fer, ¿te gustaría seguir siendo mi novia? <3</p>
     <div>
         <img id="cora" src="abrazo.svg" alt="">
     </div>
